--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.34MB/s(Youtube:不良林), server: 213.183.59.177, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-1.18MB/s(Youtube:不良林), server: 217.30.10.66, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 波兰-1.43MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 波兰-853.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-303.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 波兰-182.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇨🇳 中国-5.30MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林), server: 213.183.53.208, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
   - {name: 🇳🇱 荷兰-977.1KB/s(Youtube:不良林), server: 213.183.59.177, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇳🇱 荷兰-1.30MB/s(Youtube:不良林), server: 213.183.59.229, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 波兰-853.2KB/s(Youtube:不良林)
+      - 波兰-303.6KB/s(Youtube:不良林)
+      - 波兰-182.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
 rules:
