--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 波兰-853.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-303.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 波兰-182.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇨🇳 中国-5.30MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林), server: 213.183.53.208, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇳🇱 荷兰-977.1KB/s(Youtube:不良林), server: 213.183.59.177, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇳🇱 荷兰-1.30MB/s(Youtube:不良林), server: 213.183.59.229, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 波兰-1.43MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-1.05MB/s(Youtube:不良林), server: 217.30.10.65, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇫🇷 法国-563.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林), server: 213.183.53.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇳🇱 荷兰-546.6KB/s(Youtube:不良林), server: 213.183.59.185, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林), server: 213.183.51.171, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-2.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 波兰-853.2KB/s(Youtube:不良林)
-      - 波兰-303.6KB/s(Youtube:不良林)
-      - 波兰-182.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
+      - 波兰-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
