--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.30MB/s(Youtube:不良林), server: 213.183.59.229, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇳🇱 荷兰-538.1KB/s(Youtube:不良林), server: 213.183.59.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇺🇸 美国-227.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 波兰-1.43MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 波兰-1.05MB/s(Youtube:不良林), server: 217.30.10.65, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇫🇷 法国-563.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林), server: 213.183.53.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇳🇱 荷兰-546.6KB/s(Youtube:不良林), server: 213.183.59.185, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林), server: 213.183.51.171, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-2.95MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇳🇱 荷兰-2.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 捷克-653.3KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-316.6KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 波兰-1.43MB/s(Youtube:不良林)
-      - 波兰-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-353.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-546.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1018.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 捷克-653.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
