--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-538.1KB/s(Youtube:不良林), server: 213.183.59.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇺🇸 美国-227.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 波兰-1.43MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇳🇱 荷兰-2.95MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-2.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-834.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2, server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 捷克-653.3KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇺🇸 美国-316.6KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.24MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-538.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 波兰-1.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林) 2
       - 捷克-653.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
